--- a/gitops/apps/home-assistant/configuration/dashboards/light_control.yaml
+++ b/gitops/apps/home-assistant/configuration/dashboards/light_control.yaml
@@ -34,13 +34,7 @@ views:
             cards:
               - type: custom:mushroom-button-card
                 icon: mdi:lightbulb-group
-                name: >
-                  {% set room = states('input_select.room_selector') %}
-                  {% if room and room != 'unknown' and room != 'unavailable' %}
-                    All {{ room | replace('_', ' ') | title }} Lights On
-                  {% else %}
-                    All Lights On
-                  {% endif %}
+                label: "{% set room = states('input_select.room_selector') %}{% if room and room != 'unknown' and room != 'unavailable' %}All {{ room | replace('_', ' ') | title }} Lights On{% else %}All Lights On{% endif %}"
                 tap_action:
                   action: call-service
                   service: light.turn_on
@@ -86,13 +80,7 @@ views:
                       {% endif %}
               - type: custom:mushroom-button-card
                 icon: mdi:lightbulb-group-off
-                name: >
-                  {% set room = states('input_select.room_selector') %}
-                  {% if room and room != 'unknown' and room != 'unavailable' %}
-                    All {{ room | replace('_', ' ') | title }} Lights Off
-                  {% else %}
-                    All Lights Off
-                  {% endif %}
+                label: "{% set room = states('input_select.room_selector') %}{% if room and room != 'unknown' and room != 'unavailable' %}All {{ room | replace('_', ' ') | title }} Lights Off{% else %}All Lights Off{% endif %}"
                 tap_action:
                   action: call-service
                   service: light.turn_off
