--- a/gitops/apps/home-assistant/dashboards-configmap.yaml
+++ b/gitops/apps/home-assistant/dashboards-configmap.yaml
@@ -879,13 +879,18 @@ data:
                   {% endif %}
     
               # Room Group Control Buttons - dynamically discover lights per room
-              - type: grid
-                square: false
-                columns: 2
-                cards:
-                  - type: custom:mushroom-button-card
+              - type: entities
+                title: Room Controls
+                entities:
+                  - type: button
+                    name: >
+                      {% set room = states('input_select.room_selector') %}
+                      {% if room and room != 'unknown' and room != 'unavailable' %}
+                        All {{ room | replace('_', ' ') | title }} Lights On
+                      {% else %}
+                        All Lights On
+                      {% endif %}
                     icon: mdi:lightbulb-group
-                    label: "{% set room = states('input_select.room_selector') %}{% if room and room != 'unknown' and room != 'unavailable' %}All {{ room | replace('_', ' ') | title }} Lights On{% else %}All Lights On{% endif %}"
                     tap_action:
                       action: call-service
                       service: light.turn_on
@@ -929,9 +934,15 @@ data:
                           {% else %}
                             []
                           {% endif %}
-                  - type: custom:mushroom-button-card
+                  - type: button
+                    name: >
+                      {% set room = states('input_select.room_selector') %}
+                      {% if room and room != 'unknown' and room != 'unavailable' %}
+                        All {{ room | replace('_', ' ') | title }} Lights Off
+                      {% else %}
+                        All Lights Off
+                      {% endif %}
                     icon: mdi:lightbulb-group-off
-                    label: "{% set room = states('input_select.room_selector') %}{% if room and room != 'unknown' and room != 'unavailable' %}All {{ room | replace('_', ' ') | title }} Lights Off{% else %}All Lights Off{% endif %}"
                     tap_action:
                       action: call-service
                       service: light.turn_off
@@ -1012,7 +1023,7 @@ data:
                               {{ false }}
                             {% endif %}
                       card:
-                        type: custom:mushroom-light-card
+                        type: light
                         entity: >
                           {% set room = states('input_select.room_selector') %}
                           {% set room_key = room %}
@@ -1028,9 +1039,6 @@ data:
                         name: >
                           {% set room = states('input_select.room_selector') %}
                           {{ room | replace('_', ' ') | title }}
-                        show_brightness_control: true
-                        show_color_control: true
-                        show_color_temp_control: true
                     # Show main light if it exists and (no numbered or multiple numbered)
                     - type: conditional
                       conditions:
@@ -1057,7 +1065,7 @@ data:
                               {{ false }}
                             {% endif %}
                       card:
-                        type: custom:mushroom-light-card
+                        type: light
                         entity: >
                           {% set room = states('input_select.room_selector') %}
                           {% if room and room != 'unknown' and room != 'unavailable' %}
@@ -1068,9 +1076,6 @@ data:
                         name: >
                           {% set room = states('input_select.room_selector') %}
                           {{ room | replace('_', ' ') | title }}
-                        show_brightness_control: true
-                        show_color_control: true
-                        show_color_temp_control: true
                     # Show numbered lights if they exist (for multiple numbered lights case)
                     # Dynamically check numbered lights 1-9 based on selected room
                     - type: conditional
@@ -1100,7 +1105,7 @@ data:
                               {{ false }}
                             {% endif %}
                       card:
-                        type: custom:mushroom-light-card
+                        type: light
                         entity: >
                           {% set room = states('input_select.room_selector') %}
                           light.{{ room }}_1
@@ -1137,7 +1142,7 @@ data:
                               {{ false }}
                             {% endif %}
                       card:
-                        type: custom:mushroom-light-card
+                        type: light
                         entity: >
                           {% set room = states('input_select.room_selector') %}
                           light.{{ room }}_2
@@ -1174,7 +1179,7 @@ data:
                               {{ false }}
                             {% endif %}
                       card:
-                        type: custom:mushroom-light-card
+                        type: light
                         entity: >
                           {% set room = states('input_select.room_selector') %}
                           light.{{ room }}_3
@@ -1211,7 +1216,7 @@ data:
                               {{ false }}
                             {% endif %}
                       card:
-                        type: custom:mushroom-light-card
+                        type: light
                         entity: >
                           {% set room = states('input_select.room_selector') %}
                           light.{{ room }}_4
@@ -1248,7 +1253,7 @@ data:
                               {{ false }}
                             {% endif %}
                       card:
-                        type: custom:mushroom-light-card
+                        type: light
                         entity: >
                           {% set room = states('input_select.room_selector') %}
                           light.{{ room }}_5
@@ -1285,7 +1290,7 @@ data:
                               {{ false }}
                             {% endif %}
                       card:
-                        type: custom:mushroom-light-card
+                        type: light
                         entity: >
                           {% set room = states('input_select.room_selector') %}
                           light.{{ room }}_6
@@ -1322,7 +1327,7 @@ data:
                               {{ false }}
                             {% endif %}
                       card:
-                        type: custom:mushroom-light-card
+                        type: light
                         entity: >
                           {% set room = states('input_select.room_selector') %}
                           light.{{ room }}_7
@@ -1359,7 +1364,7 @@ data:
                               {{ false }}
                             {% endif %}
                       card:
-                        type: custom:mushroom-light-card
+                        type: light
                         entity: >
                           {% set room = states('input_select.room_selector') %}
                           light.{{ room }}_8
@@ -1396,7 +1401,7 @@ data:
                               {{ false }}
                             {% endif %}
                       card:
-                        type: custom:mushroom-light-card
+                        type: light
                         entity: >
                           {% set room = states('input_select.room_selector') %}
                           light.{{ room }}_9
@@ -1414,7 +1419,7 @@ data:
                         - condition: template
                           value_template: "{{ states('light.hallway') != 'unavailable' }}"
                       card:
-                        type: custom:mushroom-light-card
+                        type: light
                         entity: light.hallway
                         name: Hallway
                         show_brightness_control: true
@@ -1427,7 +1432,7 @@ data:
                         - condition: template
                           value_template: "{{ states('light.entrance_lights') != 'unavailable' }}"
                       card:
-                        type: custom:mushroom-light-card
+                        type: light
                         entity: light.entrance_lights
                         name: Entrance Lights
                         show_brightness_control: true
