--- a/gitops/apps/home-assistant/cronjob.yaml
+++ b/gitops/apps/home-assistant/cronjob.yaml
@@ -11,6 +11,19 @@ spec:
     spec:
       template:
         spec:
+          dnsPolicy: "None"
+          dnsConfig:
+            nameservers:
+              - "10.100.20.241"
+              - "8.8.8.8"
+              - "1.1.1.1"
+            searches:
+              - "amer.home"
+              - "merenda.home.arpa"
+            options:
+              - name: "ndots"
+                value: "2"
+              - name: "edns0"
           containers:
           - name: cleanup-orphaned-entities
             image: python:3.9-slim
@@ -22,14 +35,14 @@ spec:
                 python /scripts/cleanup_orphaned_entities.py
             env:
             - name: HA_URL
-              value: "http://homeassistant.home-assistant:8123"
+              value: "http://ha.amer.home"
             - name: HA_ACCESS_TOKEN
               valueFrom:
                 secretKeyRef:
                   name: home-assistant-access-token
                   key: token
             - name: DRY_RUN
-              value: "true"  # Start in dry-run mode for safety
+              value: "false"
             volumeMounts:
             - name: cleanup-script
               mountPath: /scripts
