--- a/gitops/apps/home-assistant/cronjob.yaml
+++ b/gitops/apps/home-assistant/cronjob.yaml
@@ -53,4 +53,55 @@ spec:
             configMap:
               name: home-assistant-cleanup-script
               defaultMode: 0755
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: home-assistant-calendar-cache
+  namespace: home-assistant
+spec:
+  schedule: "*/15 * * * *"  # Every 15 minutes
+  successfulJobsHistoryLimit: 3
+  failedJobsHistoryLimit: 3
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          dnsPolicy: "None"
+          dnsConfig:
+            nameservers:
+              - "10.100.20.241"
+              - "8.8.8.8"
+              - "1.1.1.1"
+            searches:
+              - "amer.home"
+              - "merenda.home.arpa"
+            options:
+              - name: "ndots"
+                value: "2"
+              - name: "edns0"
+          containers:
+          - name: download-calendar
+            image: alpine:3.20
+            command:
+              - /bin/sh
+              - -c
+              - |
+                apk add --no-cache curl && \
+                /scripts/download_calendar.sh
+            volumeMounts:
+            - name: calendar-script
+              mountPath: /scripts
+              readOnly: true
+            - name: config
+              mountPath: /config
+          restartPolicy: OnFailure
+          volumes:
+          - name: calendar-script
+            configMap:
+              name: home-assistant-calendar-script
+              defaultMode: 0755
+          - name: config
+            persistentVolumeClaim:
+              claimName: homeassistant-config
 
