--- a/gitops/apps/home-assistant/storage.yaml
+++ b/gitops/apps/home-assistant/storage.yaml
@@ -10,3 +10,16 @@ spec:
     requests:
       storage: 10Gi
   storageClassName: longhorn
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: homeassistant-calendar-cache
+  namespace: home-assistant
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 1Gi
+  storageClassName: longhorn
