cache work calendar

--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -17,6 +17,7 @@ server:
   config:
     url: "https://argocd.amer.home"
     application.instanceLabelKey: "argocd.argoproj.io/instance"
+    exec.enabled: "true"
 
 # Repository server configuration
 repoServer:
