--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -199,6 +199,12 @@ spec:
                     icon: mdi:lightbulb-group
                     show_in_sidebar: true
                     filename: dashboards/views/light_control.yaml
+                  dean:
+                    mode: yaml
+                    title: Dean
+                    icon: mdi:home
+                    show_in_sidebar: true
+                    filename: dashboards/dean.yaml
         
               # HTTP reverse proxy
               http:
