--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -199,7 +199,7 @@ spec:
                     icon: mdi:lightbulb-group
                     show_in_sidebar: true
                     filename: dashboards/views/light_control.yaml
-                  dean:
+                  dean-dashboard:
                     mode: yaml
                     title: Dean
                     icon: mdi:home
